--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.25.4",
+    "@nextui-org/react": "^2.1.13",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.8.3",
     "@types/react": "18.2.25",
@@ -18,6 +21,7 @@
     "clsx": "^2.0.0",
     "eslint": "8.51.0",
     "eslint-config-next": "13.5.4",
+    "framer-motion": "^10.16.4",
     "lucide-react": "^0.284.0",
     "next": "13.5.4",
     "postcss": "8.4.31",
