--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "@clerk/nextjs": "^4.25.4",
     "@hello-pangea/dnd": "^16.3.0",
     "@hookform/resolvers": "^3.3.2",
+    "@mux/mux-node": "^7.3.5",
+    "@mux/mux-player-react": "^2.3.2",
     "@nextui-org/react": "^2.1.13",
     "@prisma/client": "^5.5.2",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
@@ -46,6 +50,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "prettier": "3.2.4",
     "prisma": "^5.5.2"
   }
 }
