--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
     "lucide-react": "^0.284.0",
     "next": "13.5.4",
     "postcss": "8.4.31",
+    "query-string": "^8.2.0",
     "react": "18.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
