--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.25.4",
+    "@clerk/nextjs": "^4.29.7",
     "@hello-pangea/dnd": "^16.3.0",
     "@hookform/resolvers": "^3.3.2",
     "@mux/mux-node": "^7.3.5",
     "@mux/mux-player-react": "^2.3.2",
     "@nextui-org/react": "^2.1.13",
-    "@prisma/client": "^5.5.2",
+    "@prisma/client": "^5.9.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -36,19 +37,20 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "eslint": "8.51.0",
-    "eslint-config-next": "13.5.4",
+    "eslint-config-next": "^14.1.0",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.284.0",
-    "next": "13.5.4",
+    "next": "^14.1.0",
     "postcss": "8.4.31",
     "query-string": "^8.2.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-confetti": "^6.1.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
+    "recharts": "^2.12.1",
     "stripe": "^14.17.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
@@ -60,6 +62,6 @@
   },
   "devDependencies": {
     "prettier": "3.2.4",
-    "prisma": "^5.5.2"
+    "prisma": "^5.9.1"
   }
 }
