--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.284.0",
     "next": "^14.1.0",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.31",
     "query-string": "^8.2.0",
     "react": "^18.2.0",
